Added Classes Etc.

--- a/TibiaXBot/TibiaXBot/TibiaXBot.csproj
+++ b/TibiaXBot/TibiaXBot/TibiaXBot.csproj
@@ -65,10 +65,19 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Outfit.resx">
+      <DependentUpon>Outfit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Spammer.resx">
+      <DependentUpon>Spammer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WASD.resx">
+      <DependentUpon>WASD.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -97,7 +106,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\TibiaAPI Source\trunk\tibiaapi\TibiaAPI.csproj">
+    <ProjectReference Include="..\TibiaAPI Source\trunk\tibiaapi\TibiaAPI.csproj">
       <Project>{4D132EB7-B97D-461D-85CF-949FF5A7BA96}</Project>
       <Name>TibiaAPI</Name>
     </ProjectReference>
