--- a/TibiaXBot/TibiaXBot/TibiaXBot.csproj
+++ b/TibiaXBot/TibiaXBot/TibiaXBot.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Spammer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Spammer.designer.cs">
+      <DependentUpon>Spammer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Spammer.resx">
+      <DependentUpon>Spammer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -72,9 +81,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Spammer.resx">
-      <DependentUpon>Spammer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WASD.resx">
       <DependentUpon>WASD.cs</DependentUpon>
@@ -91,12 +97,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="Spammer.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Spammer.Designer.cs">
-      <DependentUpon>Spammer.cs</DependentUpon>
     </Compile>
     <Compile Include="WASD.cs">
       <SubType>Form</SubType>
