--- a/TibiaXBot/TibiaXBot/TibiaXBot.csproj
+++ b/TibiaXBot/TibiaXBot/TibiaXBot.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F4B7DC1D-EF12-4952-BDD0-A71F3366A3CB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -119,6 +119,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Splash.resx">
+      <DependentUpon>Splash.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WASD.resx">
       <DependentUpon>WASD.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,6 +140,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Splash.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Splash.Designer.cs">
+      <DependentUpon>Splash.cs</DependentUpon>
+    </Compile>
     <Compile Include="WASD.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +154,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\splash.bmp" />
     <Content Include="ToDo.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -184,9 +194,6 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
